SmartNews_unpackaged/objects/News__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SourceUrl__c</fullName>
        <label>SourceUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>publishedAt__c</fullName>
        <label>Published at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>urlToImage__c</fullName>
        <label>urlToImage</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Author__c</columns>
        <columns>Content__c</columns>
        <columns>Description__c</columns>
        <columns>publishedAt__c</columns>
        <columns>Source__c</columns>
        <columns>SourceUrl__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>News</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>